--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "axios": "^1.1.3",
     "global": "^4.4.0",
-    "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hls-player": "^3.0.7",
+    "react-modal": "^3.16.1",
+    "react-player": "^2.11.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4"
   },
@@ -14,9 +16,11 @@
   "devDependencies": {
     "@types/chrome": "^0.0.200",
     "@types/react-dom": "^18.0.8",
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.13",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "style-loader": "^3.3.1",
